kubernetes_deployment/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fraud-platform-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: fraud.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 8000
