kubernetes_deployment/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fraud-platform-frontend-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: fraud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
