kubernetes_deployment/websocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fraud-platform-websocket-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: fraud.local
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
